compilers/ID/cool/aps/aps.output
Terminals which are not used

   TRIPLECOLON


Grammar

    0 $accept: program $end

    1 @1: /* empty */

    2 program: @1 unit_list

    3 unit_list: /* empty */
    4          | unit_list unit
    5          | unit_list fixity ';'
    6          | unit_list keyPRIVATE ';'
    7          | unit_list keyPUBLIC ';'
    8          | unit_list ';'

    9 unit: with
   10     | decl

   11 fixity: keyINFIX optional_integer OPERATOR
   12       | keyINFIXL optional_integer OPERATOR
   13       | keyINFIXR optional_integer OPERATOR

   14 optional_integer: /* empty */
   15                 | INTEGER

   16 with: keyWITH STRING_CONSTANT ';'

   17 decl_list: /* empty */
   18          | decl_list ';'
   19          | decl_list keyPRIVATE ';'
   20          | decl_list keyPUBLIC ';'
   21          | decl_list decl

   22 decl: signature_decl
   23     | module_decl
   24     | pragma_decl
   25     | type_decl
   26     | function_decl
   27     | var_decl
   28     | inherit_decl
   29     | phy_decl
   30     | con_decl
   31     | pat_decl
   32     | attribute_decl
   33     | match_decl

   34 @2: /* empty */

   35 decl: keyPRIVATE @2 decl

   36 @3: /* empty */

   37 decl: keyPUBLIC @3 decl
   38     | keyCONSTANT decl

   39 @4: /* empty */

   40 decl: keyVAR @4 decl
   41     | error

   42 signature_decl: keySIGNATURE id polymorphism result_type module_body ';'

   43 module_decl: keyMODULE id polymorphism formals result_type module_body ';'
   44            | keyMODULE id polymorphism result_type module_body ';'

   45 result_type: opt_id opt_signatures opt_extension

   46 opt_id: /* empty */
   47       | id

   48 opt_extension: /* empty */
   49              | '=' type
   50              | keyEXTENDS type

   51 module_body: /* empty */

   52 @5: /* empty */

   53 module_body: keyBEGIN @5 decl_list iskeyEND

   54 pragma_decl: keyPRAGMA id ';'
   55            | keyPRAGMA id '(' ')' ';'
   56            | keyPRAGMA id '(' sequence_actuals ')' ';'

   57 inherit_decl: keyINHERIT type keyBEGIN renamings iskeyEND ';'
   58             | keyINHERIT type ';'

   59 renamings: /* empty */
   60          | renamings renaming ';'

   61 @6: /* empty */

   62 renaming: keyPUBLIC @6 base_renaming

   63 @7: /* empty */

   64 renaming: keyPRIVATE @7 base_renaming
   65         | base_renaming
   66         | value_keyword id ARROW expr
   67         | type_keyword id ARROW type

   68 base_renaming: error
   69              | pattern_keyword id '=' id
   70              | value_keyword id '=' id
   71              | type_keyword id '=' id
   72              | signature_keyword id '=' id

   73 @8: /* empty */

   74 base_renaming: signature_keyword id '=' id @8 keyBEGIN renamings iskeyEND

   75 value_keyword: /* empty */
   76              | keyVAR
   77              | keyFUNCTION
   78              | keyPROCEDURE
   79              | keyATTRIBUTE
   80              | keyCONSTRUCTOR

   81 pattern_keyword: keyPATTERN

   82 type_keyword: keyTYPE
   83             | keyPHYLUM

   84 signature_keyword: keyMODULE
   85                  | keySIGNATURE

   86 phy_decl: keyPHYLUM id ';'
   87         | keyPHYLUM id '=' type ';'

   88 con_decl: keyCONSTRUCTOR id opt_polymorphism formals result_value opt_body ';'

   89 pat_decl: keyPATTERN id opt_polymorphism formals result_value pattern_body ';'

   90 pattern_body: /* empty */
   91             | '=' choices
   92             | '='

   93 attribute_decl: opt_direction keyATTRIBUTE id opt_polymorphism opt_formal ':' type default ';'
   94               | opt_direction keyATTRIBUTE opt_formal '.' id ':' type default ';'
   95               | opt_direction keyATTRIBUTE polymorphism opt_formal '.' id ':' type default ';'

   96 opt_direction: /* empty */
   97              | direction

   98 direction: keyINPUT
   99          | keyINPUT keyCOLLECTION
  100          | keyCOLLECTION
  101          | keyINPUT keyCIRCULAR
  102          | keyCIRCULAR

  103 opt_formal: /* empty */
  104           | id
  105           | '(' id ':' id ')'

  106 default: /* empty */
  107        | COLONEQ expr
  108        | COLONEQ lattice

  109 lattice: expr ',' expr
  110        | expr ',' expr ',' expr

  111 match_decl: match

  112 type_decl: keyTYPE id opt_signatures ';'
  113          | keyTYPE id opt_signatures '=' type ';'

  114 var_decl: opt_direction id ':' type default ';'

  115 function_decl: keyFUNCTION id opt_polymorphism formals result_value opt_body ';'
  116              | keyPROCEDURE id opt_polymorphism formals result_value opt_body ';'

  117 result_value: opt_direction opt_id opt_typing default

  118 opt_typing: /* empty */
  119           | ':' type

  120 opt_body: /* empty */
  121         | keyBEGIN stmts iskeyEND

  122 opt_polymorphism: /* empty */
  123                 | polymorphism

  124 polymorphism: '[' type_formals ']'
  125             | '[' ']'

  126 type_formals: type_formal
  127             | type_formals ';' type_formal

  128 type_formal: id opt_signatures
  129            | id ',' type_formal

  130 opt_signatures: /* empty */
  131               | DOUBLECOLON signatures

  132 signatures: signature
  133           | signatures ',' signature

  134 signature: id
  135          | id type_parameters
  136          | keyCONSTANT signature
  137          | keyVAR signature
  138          | '{' types '}'

  139 type_parameters: '[' ']'
  140                | '[' type_actuals ']'

  141 type_actuals: type
  142             | type_actuals ',' type

  143 types: /* empty */
  144      | non_empty_types

  145 non_empty_types: type
  146                | non_empty_types ',' type

  147 formals: '(' formal_list ')'
  148        | '(' ')'

  149 formal_list: formal
  150            | formal_list ';' formal

  151 formal: id ':' type
  152       | id ',' formal

  153 type: simple_type
  154     | keyREMOTE type
  155     | keyFUNCTION formals opt_typing

  156 simple_type: atomic_type
  157            | simple_type '$' id
  158            | simple_type type_parameters
  159            | simple_type type_parameters actuals

  160 atomic_type: id
  161            | '{' type '}'
  162            | '{' type ',' expr '}'
  163            | '{' type ',' expr ',' expr '}'
  164            | '(' type ')'

  165 type_prefix: id
  166            | type_prefix '$' id

  167 Pattern: pattern
  168        | pattern keyIF expr
  169        | error

  170 choices: Pattern
  171        | choices ',' Pattern

  172 pattern: simple_pattern
  173        | pattern keyAND simple_pattern
  174        | pattern '=' simple_pattern

  175 simple_pattern: constructor_name simple_pattern_args
  176               | '{' sequence_pattern_args '}'
  177               | '{' sequence_pattern_args '}' ':' type
  178               | type_prefix '$' '{' sequence_pattern_args '}'
  179               | '{' '}'
  180               | '{' '}' ':' type
  181               | type_prefix '$' '{' '}'
  182               | '?' id ':' type
  183               | '?' id
  184               | '?'
  185               | '!' simple_expr
  186               | id
  187               | INTEGER
  188               | STRING_CONSTANT
  189               | '(' Pattern ')'

  190 constructor_name: id
  191                 | type_prefix '$' id

  192 simple_pattern_args: '(' ')'
  193                    | '(' non_empty_pattern_args ')'

  194 non_empty_pattern_args: Pattern
  195                       | id COLONEQ Pattern
  196                       | DOTDOTDOT
  197                       | Pattern ',' non_empty_pattern_args
  198                       | id COLONEQ Pattern ',' non_empty_pattern_args

  199 sequence_pattern_args: sequence_pattern
  200                      | sequence_pattern_args ',' sequence_pattern

  201 sequence_pattern: pattern
  202                 | DOTDOTDOT
  203                 | DOTDOTDOT keyAND simple_pattern

  204 stmts: stmt_list

  205 stmt_list: /* empty */
  206          | stmt_list stmt

  207 stmt: error
  208     | ';'
  209     | expr ';'
  210     | lhs COLONEQ expr ';'
  211     | keyIF expr keyTHEN stmts stmt_elsif_part iskeyENDIF ';'
  212     | keyFOR id ':' type keyIN expr keyBEGIN stmts iskeyEND ';'
  213     | keyFOR id ':' type keyON expr keyBEGIN stmts iskeyEND ';'
  214     | direction id ':' type default ';'
  215     | id ':' type default ';'
  216     | keyVAR opt_direction id ':' type default ';'
  217     | direction keyVAR id ':' type default ';'
  218     | keyBEGIN stmts iskeyEND ';'
  219     | keyCASE expr keyBEGIN stmt_match_list stmt_match_default iskeyEND ';'
  220     | keyFOR expr keyBEGIN stmt_match_list iskeyEND ';'

  221 lhs: expr

  222 stmt_elsif_part: /* empty */
  223                | keyELSE stmts
  224                | keyELSIF expr keyTHEN stmts stmt_elsif_part

  225 stmt_match_list: /* empty */
  226                | stmt_match_list match

  227 match: keyMATCH opt_polymorphism Pattern keyBEGIN stmts iskeyEND ';'

  228 stmt_match_default: /* empty */
  229                   | keyELSE stmts

  230 expr: simple_expr
  231     | expr DOTDOTDOT
  232     | expr DOTDOT expr
  233     | expr OPL0 expr
  234     | expr OPR0 expr
  235     | expr OPL1 expr
  236     | expr OPR1 expr
  237     | expr OPL2 expr
  238     | expr OPR2 expr
  239     | expr OPL3 expr
  240     | expr OPR3 expr
  241     | expr OPL4 expr
  242     | expr '=' expr
  243     | expr OPR4 expr
  244     | expr OPL5 expr
  245     | expr OPR5 expr
  246     | expr OPL6 expr
  247     | expr OPR6 expr
  248     | expr OPL7 expr
  249     | expr OPR7 expr
  250     | expr OPL8 expr
  251     | expr OPR8 expr
  252     | expr OPL9 expr
  253     | expr OPR9 expr
  254     | expr OPERATOR expr
  255     | expr '-' expr
  256     | '-' expr
  257     | expr keyAND expr
  258     | expr keyOR expr
  259     | keyNOT expr
  260     | expr keyIN expr
  261     | expr keyNOT keyIN expr

  262 simple_expr: atomic_expr
  263            | simple_expr type_parameters
  264            | simple_expr actuals
  265            | simple_expr '.' atomic_expr

  266 atomic_expr: id
  267            | keyTYPE id
  268            | keyMODULE id
  269            | keySIGNATURE id
  270            | INTEGER
  271            | STRING_CONSTANT
  272            | CHARACTER_CONSTANT
  273            | '(' expr ')'
  274            | '{' sequence_actuals '}'
  275            | '{' '}'
  276            | type_prefix '$' '{' sequence_actuals '}'
  277            | type_prefix '$' '{' '}'
  278            | type_prefix '$' id
  279            | '(' error ')'

  280 actuals: '(' ')'
  281        | '(' non_empty_actuals ')'

  282 non_empty_actuals: actual
  283                  | non_empty_actuals ',' actual

  284 actual: expr

  285 sequence_actuals: sequence_actual
  286                 | sequence_actuals ',' sequence_actual

  287 sequence_actual: expr
  288                | sequence_actual keyIF expr
  289                | sequence_actual keyFOR id ':' type keyIN expr

  290 id: IDENTIFIER
  291   | '(' keyAND ')'
  292   | '(' keyATTRIBUTE ')'
  293   | '(' keyATTRIBUTION ')'
  294   | '(' keyBEGIN ')'
  295   | '(' keyCASE ')'
  296   | '(' keyCIRCULAR ')'
  297   | '(' keyCOLLECTION ')'
  298   | '(' keyCONSTANT ')'
  299   | '(' keyCONSTRUCTOR ')'
  300   | '(' keyDECLARE ')'
  301   | '(' keyELSE ')'
  302   | '(' keyELSIF ')'
  303   | '(' keyEND ')'
  304   | '(' keyENDIF ')'
  305   | '(' keyEXTENDS ')'
  306   | '(' keyFOR ')'
  307   | '(' keyFUNCTION ')'
  308   | '(' keyGROUP ')'
  309   | '(' keyIF ')'
  310   | '(' keyIN ')'
  311   | '(' keyINFIX ')'
  312   | '(' keyINFIXL ')'
  313   | '(' keyINFIXR ')'
  314   | '(' keyINHERIT ')'
  315   | '(' keyINPUT ')'
  316   | '(' keyLANGUAGE ')'
  317   | '(' keyMATCH ')'
  318   | '(' keyMODULE ')'
  319   | '(' keyNOT ')'
  320   | '(' keyON ')'
  321   | '(' keyOR ')'
  322   | '(' keyPATTERN ')'
  323   | '(' keyPHYLUM ')'
  324   | '(' keyPRAGMA ')'
  325   | '(' keyPRIVATE ')'
  326   | '(' keyPROCEDURE ')'
  327   | '(' keyPUBLIC ')'
  328   | '(' keyREMOTE ')'
  329   | '(' keyRETURN ')'
  330   | '(' keySIGNATURE ')'
  331   | '(' keyTHEN ')'
  332   | '(' keyTYPE ')'
  333   | '(' keyUSE ')'
  334   | '(' keyVAR ')'
  335   | '(' keyWITH ')'
  336   | '(' OPL0 ')'
  337   | '(' OPR0 ')'
  338   | '(' OPL1 ')'
  339   | '(' OPR1 ')'
  340   | '(' OPL2 ')'
  341   | '(' OPR2 ')'
  342   | '(' OPL3 ')'
  343   | '(' OPR3 ')'
  344   | '(' OPL4 ')'
  345   | '(' OPR4 ')'
  346   | '(' OPL5 ')'
  347   | '(' OPR5 ')'
  348   | '(' OPL6 ')'
  349   | '(' OPR6 ')'
  350   | '(' OPL7 ')'
  351   | '(' OPR7 ')'
  352   | '(' OPL8 ')'
  353   | '(' OPR8 ')'
  354   | '(' OPL9 ')'
  355   | '(' OPR9 ')'
  356   | '(' '=' ')'
  357   | '(' '-' ')'
  358   | '(' OPERATOR ')'
  359   | '{' '.' '}'
  360   | '(' '.' ')'
  361   | '(' DOTDOT ')'
  362   | '(' DOTDOTDOT ')'

  363 iskeyEND: keyEND
  364         | keyENDIF

  365 iskeyENDIF: keyENDIF
  366           | keyEND


Terminals, with rules where they appear

$end (0) 0
'!' (33) 185
'$' (36) 157 166 178 181 191 276 277 278
'(' (40) 55 56 105 147 148 164 189 192 193 273 279 280 281 291 292
    293 294 295 296 297 298 299 300 301 302 303 304 305 306 307 308
    309 310 311 312 313 314 315 316 317 318 319 320 321 322 323 324
    325 326 327 328 329 330 331 332 333 334 335 336 337 338 339 340
    341 342 343 344 345 346 347 348 349 350 351 352 353 354 355 356
    357 358 360 361 362
')' (41) 55 56 105 147 148 164 189 192 193 273 279 280 281 291 292
    293 294 295 296 297 298 299 300 301 302 303 304 305 306 307 308
    309 310 311 312 313 314 315 316 317 318 319 320 321 322 323 324
    325 326 327 328 329 330 331 332 333 334 335 336 337 338 339 340
    341 342 343 344 345 346 347 348 349 350 351 352 353 354 355 356
    357 358 360 361 362
',' (44) 109 110 129 133 142 146 152 162 163 171 197 198 200 283 286
'-' (45) 255 256 357
'.' (46) 94 95 265 359 360
':' (58) 93 94 95 105 114 119 151 177 180 182 212 213 214 215 216 217
    289
';' (59) 5 6 7 8 16 18 19 20 42 43 44 54 55 56 57 58 60 86 87 88 89
    93 94 95 112 113 114 115 116 127 150 208 209 210 211 212 213 214
    215 216 217 218 219 220 227
'=' (61) 49 69 70 71 72 74 87 91 92 113 174 242 356
'?' (63) 182 183 184
'[' (91) 124 125 139 140
']' (93) 124 125 139 140
'{' (123) 138 161 162 163 176 177 178 179 180 181 274 275 276 277 359
'}' (125) 138 161 162 163 176 177 178 179 180 181 274 275 276 277 359
error (256) 41 68 169 207 279
keyAND (258) 173 203 257 291
keyATTRIBUTE (259) 79 93 94 95 292
keyATTRIBUTION (260) 293
keyBEGIN (261) 53 57 74 121 212 213 218 219 220 227 294
keyCASE (262) 219 295
keyCIRCULAR (263) 101 102 296
keyCOLLECTION (264) 99 100 297
keyCONSTANT (265) 38 136 298
keyCONSTRUCTOR (266) 80 88 299
keyDECLARE (267) 300
keyELSE (268) 223 229 301
keyELSIF (269) 224 302
keyEND (270) 303 363 366
keyENDIF (271) 304 364 365
keyEXTENDS (272) 50 305
keyFOR (273) 212 213 220 289 306
keyFUNCTION (274) 77 115 155 307
keyGROUP (275) 308
keyIF (276) 168 211 288 309
keyIN (277) 212 260 261 289 310
keyINFIX (278) 11 311
keyINFIXL (279) 12 312
keyINFIXR (280) 13 313
keyINHERIT (281) 57 58 314
keyINPUT (282) 98 99 101 315
keyLANGUAGE (283) 316
keyMATCH (284) 227 317
keyMODULE (285) 43 44 84 268 318
keyNOT (286) 259 261 319
keyON (287) 213 320
keyOR (288) 258 321
keyPATTERN (289) 81 89 322
keyPHYLUM (290) 83 86 87 323
keyPRAGMA (291) 54 55 56 324
keyPRIVATE (292) 6 19 35 64 325
keyPROCEDURE (293) 78 116 326
keyPUBLIC (294) 7 20 37 62 327
keyREMOTE (295) 154 328
keyRETURN (296) 329
keySIGNATURE (297) 42 85 269 330
keyTHEN (298) 211 224 331
keyTYPE (299) 82 112 113 267 332
keyUSE (300) 333
keyVAR (301) 40 76 137 216 217 334
keyWITH (302) 16 335
DOTDOT (303) 232 361
DOUBLECOLON (304) 131
DOTDOTDOT (305) 196 202 203 231 362
TRIPLECOLON (306)
ARROW (307) 66 67
IDENTIFIER (308) 290
OPERATOR (309) 11 12 13 254 358
INTEGER (310) 15 187 270
STRING_CONSTANT (311) 16 188 271
CHARACTER_CONSTANT (312) 272
COLONEQ (313) 107 108 195 198 210
OPL0 (314) 233 336
OPR0 (315) 234 337
OPL1 (316) 235 338
OPR1 (317) 236 339
OPL2 (318) 237 340
OPR2 (319) 238 341
OPL3 (320) 239 342
OPR3 (321) 240 343
OPL4 (322) 241 344
OPR4 (323) 243 345
OPL5 (324) 244 346
OPR5 (325) 245 347
OPL6 (326) 246 348
UNARY (327)
OPR6 (328) 247 349
OPL7 (329) 248 350
OPR7 (330) 249 351
OPL8 (331) 250 352
OPR8 (332) 251 353
OPL9 (333) 252 354
OPR9 (334) 253 355


Nonterminals, with rules where they appear

$accept (95)
    on left: 0
program (96)
    on left: 2, on right: 0
@1 (97)
    on left: 1, on right: 2
unit_list (98)
    on left: 3 4 5 6 7 8, on right: 2 4 5 6 7 8
unit (99)
    on left: 9 10, on right: 4
fixity (100)
    on left: 11 12 13, on right: 5
optional_integer (101)
    on left: 14 15, on right: 11 12 13
with (102)
    on left: 16, on right: 9
decl_list (103)
    on left: 17 18 19 20 21, on right: 18 19 20 21 53
decl (104)
    on left: 22 23 24 25 26 27 28 29 30 31 32 33 35 37 38 40 41,
    on right: 10 21 35 37 38 40
@2 (105)
    on left: 34, on right: 35
@3 (106)
    on left: 36, on right: 37
@4 (107)
    on left: 39, on right: 40
signature_decl (108)
    on left: 42, on right: 22
module_decl (109)
    on left: 43 44, on right: 23
result_type (110)
    on left: 45, on right: 42 43 44
opt_id (111)
    on left: 46 47, on right: 45 117
opt_extension (112)
    on left: 48 49 50, on right: 45
module_body (113)
    on left: 51 53, on right: 42 43 44
@5 (114)
    on left: 52, on right: 53
pragma_decl (115)
    on left: 54 55 56, on right: 24
inherit_decl (116)
    on left: 57 58, on right: 28
renamings (117)
    on left: 59 60, on right: 57 60 74
renaming (118)
    on left: 62 64 65 66 67, on right: 60
@6 (119)
    on left: 61, on right: 62
@7 (120)
    on left: 63, on right: 64
base_renaming (121)
    on left: 68 69 70 71 72 74, on right: 62 64 65
@8 (122)
    on left: 73, on right: 74
value_keyword (123)
    on left: 75 76 77 78 79 80, on right: 66 70
pattern_keyword (124)
    on left: 81, on right: 69
type_keyword (125)
    on left: 82 83, on right: 67 71
signature_keyword (126)
    on left: 84 85, on right: 72 74
phy_decl (127)
    on left: 86 87, on right: 29
con_decl (128)
    on left: 88, on right: 30
pat_decl (129)
    on left: 89, on right: 31
pattern_body (130)
    on left: 90 91 92, on right: 89
attribute_decl (131)
    on left: 93 94 95, on right: 32
opt_direction (132)
    on left: 96 97, on right: 93 94 95 114 117 216
direction (133)
    on left: 98 99 100 101 102, on right: 97 214 217
opt_formal (134)
    on left: 103 104 105, on right: 93 94 95
default (135)
    on left: 106 107 108, on right: 93 94 95 114 117 214 215 216 217
lattice (136)
    on left: 109 110, on right: 108
match_decl (137)
    on left: 111, on right: 33
type_decl (138)
    on left: 112 113, on right: 25
var_decl (139)
    on left: 114, on right: 27
function_decl (140)
    on left: 115 116, on right: 26
result_value (141)
    on left: 117, on right: 88 89 115 116
opt_typing (142)
    on left: 118 119, on right: 117 155
opt_body (143)
    on left: 120 121, on right: 88 115 116
opt_polymorphism (144)
    on left: 122 123, on right: 88 89 93 115 116 227
polymorphism (145)
    on left: 124 125, on right: 42 43 44 95 123
type_formals (146)
    on left: 126 127, on right: 124 127
type_formal (147)
    on left: 128 129, on right: 126 127 129
opt_signatures (148)
    on left: 130 131, on right: 45 112 113 128
signatures (149)
    on left: 132 133, on right: 131 133
signature (150)
    on left: 134 135 136 137 138, on right: 132 133 136 137
type_parameters (151)
    on left: 139 140, on right: 135 158 159 263
type_actuals (152)
    on left: 141 142, on right: 140 142
types (153)
    on left: 143 144, on right: 138
non_empty_types (154)
    on left: 145 146, on right: 144 146
formals (155)
    on left: 147 148, on right: 43 88 89 115 116 155
formal_list (156)
    on left: 149 150, on right: 147 150
formal (157)
    on left: 151 152, on right: 149 150 152
type (158)
    on left: 153 154 155, on right: 49 50 57 58 67 87 93 94 95 113
    114 119 141 142 145 146 151 154 161 162 163 164 177 180 182 212
    213 214 215 216 217 289
simple_type (159)
    on left: 156 157 158 159, on right: 153 157 158 159
atomic_type (160)
    on left: 160 161 162 163 164, on right: 156
type_prefix (161)
    on left: 165 166, on right: 166 178 181 191 276 277 278
Pattern (162)
    on left: 167 168 169, on right: 170 171 189 194 195 197 198 227
choices (163)
    on left: 170 171, on right: 91 171
pattern (164)
    on left: 172 173 174, on right: 167 168 173 174 201
simple_pattern (165)
    on left: 175 176 177 178 179 180 181 182 183 184 185 186 187 188
    189, on right: 172 173 174 203
constructor_name (166)
    on left: 190 191, on right: 175
simple_pattern_args (167)
    on left: 192 193, on right: 175
non_empty_pattern_args (168)
    on left: 194 195 196 197 198, on right: 193 197 198
sequence_pattern_args (169)
    on left: 199 200, on right: 176 177 178 200
sequence_pattern (170)
    on left: 201 202 203, on right: 199 200
stmts (171)
    on left: 204, on right: 121 211 212 213 218 223 224 227 229
stmt_list (172)
    on left: 205 206, on right: 204 206
stmt (173)
    on left: 207 208 209 210 211 212 213 214 215 216 217 218 219 220
   , on right: 206
lhs (174)
    on left: 221, on right: 210
stmt_elsif_part (175)
    on left: 222 223 224, on right: 211 224
stmt_match_list (176)
    on left: 225 226, on right: 219 220 226
match (177)
    on left: 227, on right: 111 226
stmt_match_default (178)
    on left: 228 229, on right: 219
expr (179)
    on left: 230 231 232 233 234 235 236 237 238 239 240 241 242 243
    244 245 246 247 248 249 250 251 252 253 254 255 256 257 258 259
    260 261, on right: 66 107 109 110 162 163 168 209 210 211 212 213
    219 220 221 224 231 232 233 234 235 236 237 238 239 240 241 242
    243 244 245 246 247 248 249 250 251 252 253 254 255 256 257 258
    259 260 261 273 284 287 288 289
simple_expr (180)
    on left: 262 263 264 265, on right: 185 230 263 264 265
atomic_expr (181)
    on left: 266 267 268 269 270 271 272 273 274 275 276 277 278 279
   , on right: 262 265
actuals (182)
    on left: 280 281, on right: 159 264
non_empty_actuals (183)
    on left: 282 283, on right: 281 283
actual (184)
    on left: 284, on right: 282 283
sequence_actuals (185)
    on left: 285 286, on right: 56 274 276 286
sequence_actual (186)
    on left: 287 288 289, on right: 285 286 288 289
id (187)
    on left: 290 291 292 293 294 295 296 297 298 299 300 301 302 303
    304 305 306 307 308 309 310 311 312 313 314 315 316 317 318 319
    320 321 322 323 324 325 326 327 328 329 330 331 332 333 334 335
    336 337 338 339 340 341 342 343 344 345 346 347 348 349 350 351
    352 353 354 355 356 357 358 359 360 361 362, on right: 42 43 44
    47 54 55 56 66 67 69 70 71 72 74 86 87 88 89 93 94 95 104 105 112
    113 114 115 116 128 129 134 135 151 152 157 160 165 166 182 183
    186 190 191 195 198 212 213 214 215 216 217 266 267 268 269 278
    289
iskeyEND (188)
    on left: 363 364, on right: 53 57 74 121 212 213 218 219 220 227
iskeyENDIF (189)
    on left: 365 366, on right: 211


state 0

    0 $accept: . program $end

    $default  reduce using rule 1 (@1)

    program  go to state 1
    @1       go to state 2


state 1

    0 $accept: program . $end

    $end  shift, and go to state 3


state 2

    2 program: @1 . unit_list

    $default  reduce using rule 3 (unit_list)

    unit_list  go to state 4


state 3

    0 $accept: program $end .

    $default  accept


state 4

    2 program: @1 unit_list .
    4 unit_list: unit_list . unit
    5          | unit_list . fixity ';'
    6          | unit_list . keyPRIVATE ';'
    7          | unit_list . keyPUBLIC ';'
    8          | unit_list . ';'

    error           shift, and go to state 5
    keyCIRCULAR     shift, and go to state 6
    keyCOLLECTION   shift, and go to state 7
    keyCONSTANT     shift, and go to state 8
    keyCONSTRUCTOR  shift, and go to state 9
    keyFUNCTION     shift, and go to state 10
    keyINFIX        shift, and go to state 11
    keyINFIXL       shift, and go to state 12
    keyINFIXR       shift, and go to state 13
    keyINHERIT      shift, and go to state 14
    keyINPUT        shift, and go to state 15
    keyMATCH        shift, and go to state 16
    keyMODULE       shift, and go to state 17
    keyPATTERN      shift, and go to state 18
    keyPHYLUM       shift, and go to state 19
    keyPRAGMA       shift, and go to state 20
    keyPRIVATE      shift, and go to state 21
    keyPROCEDURE    shift, and go to state 22
    keyPUBLIC       shift, and go to state 23
    keySIGNATURE    shift, and go to state 24
    keyTYPE         shift, and go to state 25
    keyVAR          shift, and go to state 26
    keyWITH         shift, and go to state 27
    ';'             shift, and go to state 28

    $end          reduce using rule 2 (program)
    keyATTRIBUTE  reduce using rule 96 (opt_direction)
    IDENTIFIER    reduce using rule 96 (opt_direction)
    '('           reduce using rule 96 (opt_direction)
    '{'           reduce using rule 96 (opt_direction)

    unit            go to state 29
    fixity          go to state 30
    with            go to state 31
    decl            go to state 32
    signature_decl  go to state 33
    module_decl     go to state 34
    pragma_decl     go to state 35
    inherit_decl    go to state 36
    phy_decl        go to state 37
    con_decl        go to state 38
    pat_decl        go to state 39
    attribute_decl  go to state 40
    opt_direction   go to state 41
    direction       go to state 42
    match_decl      go to state 43
    type_decl       go to state 44
    var_decl        go to state 45
    function_decl   go to state 46
    match           go to state 47


state 5

   41 decl: error .

    $default  reduce using rule 41 (decl)


state 6

  102 direction: keyCIRCULAR .

    $default  reduce using rule 102 (direction)


state 7

  100 direction: keyCOLLECTION .

    $default  reduce using rule 100 (direction)


state 8

   38 decl: keyCONSTANT . decl

    error           shift, and go to state 5
    keyCIRCULAR     shift, and go to state 6
    keyCOLLECTION   shift, and go to state 7
    keyCONSTANT     shift, and go to state 8
    keyCONSTRUCTOR  shift, and go to state 9
    keyFUNCTION     shift, and go to state 10
    keyINHERIT      shift, and go to state 14
    keyINPUT        shift, and go to state 15
    keyMATCH        shift, and go to state 16
    keyMODULE       shift, and go to state 17
    keyPATTERN      shift, and go to state 18
    keyPHYLUM       shift, and go to state 19
    keyPRAGMA       shift, and go to state 20
    keyPRIVATE      shift, and go to state 48
    keyPROCEDURE    shift, and go to state 22
    keyPUBLIC       shift, and go to state 49
    keySIGNATURE    shift, and go to state 24
    keyTYPE         shift, and go to state 25
    keyVAR          shift, and go to state 26

    keyATTRIBUTE  reduce using rule 96 (opt_direction)
    IDENTIFIER    reduce using rule 96 (opt_direction)
    '('           reduce using rule 96 (opt_direction)
    '{'           reduce using rule 96 (opt_direction)

    decl            go to state 50
    signature_decl  go to state 33
    module_decl     go to state 34
    pragma_decl     go to state 35
    inherit_decl    go to state 36
    phy_decl        go to state 37
    con_decl        go to state 38
    pat_decl        go to state 39
    attribute_decl  go to state 40
    opt_direction   go to state 41
    direction       go to state 42
    match_decl      go to state 43
    type_decl       go to state 44
    var_decl        go to state 45
    function_decl   go to state 46
    match           go to state 47


state 9

   88 con_decl: keyCONSTRUCTOR . id opt_polymorphism formals result_value opt_body ';'

    IDENTIFIER  shift, and go to state 51
    '('         shift, and go to state 52
    '{'         shift, and go to state 53

    id  go to state 54


state 10

  115 function_decl: keyFUNCTION . id opt_polymorphism formals result_value opt_body ';'

    IDENTIFIER  shift, and go to state 51
    '('         shift, and go to state 52
    '{'         shift, and go to state 53

    id  go to state 55


state 11

   11 fixity: keyINFIX . optional_integer OPERATOR

    INTEGER  shift, and go to state 56

    $default  reduce using rule 14 (optional_integer)

    optional_integer  go to state 57


state 12

   12 fixity: keyINFIXL . optional_integer OPERATOR

    INTEGER  shift, and go to state 56

    $default  reduce using rule 14 (optional_integer)

    optional_integer  go to state 58


state 13

   13 fixity: keyINFIXR . optional_integer OPERATOR

    INTEGER  shift, and go to state 56

    $default  reduce using rule 14 (optional_integer)

    optional_integer  go to state 59


state 14

   57 inherit_decl: keyINHERIT . type keyBEGIN renamings iskeyEND ';'
   58             | keyINHERIT . type ';'

    keyFUNCTION  shift, and go to state 60
    keyREMOTE    shift, and go to state 61
    IDENTIFIER   shift, and go to state 51
    '('          shift, and go to state 62
    '{'          shift, and go to state 63

    type         go to state 64
    simple_type  go to state 65
    atomic_type  go to state 66
    id           go to state 67


state 15

   98 direction: keyINPUT .
   99          | keyINPUT . keyCOLLECTION
  101          | keyINPUT . keyCIRCULAR

    keyCIRCULAR    shift, and go to state 68
    keyCOLLECTION  shift, and go to state 69

    $default  reduce using rule 98 (direction)


state 16

  227 match: keyMATCH . opt_polymorphism Pattern keyBEGIN stmts iskeyEND ';'

    '['  shift, and go to state 70

    $default  reduce using rule 122 (opt_polymorphism)

    opt_polymorphism  go to state 71
    polymorphism      go to state 72


state 17

   43 module_decl: keyMODULE . id polymorphism formals result_type module_body ';'
   44            | keyMODULE . id polymorphism result_type module_body ';'

    IDENTIFIER  shift, and go to state 51
    '('         shift, and go to state 52
    '{'         shift, and go to state 53

    id  go to state 73


state 18

   89 pat_decl: keyPATTERN . id opt_polymorphism formals result_value pattern_body ';'

    IDENTIFIER  shift, and go to state 51
    '('         shift, and go to state 52
    '{'         shift, and go to state 53

    id  go to state 74


state 19

   86 phy_decl: keyPHYLUM . id ';'
   87         | keyPHYLUM . id '=' type ';'

    IDENTIFIER  shift, and go to state 51
    '('         shift, and go to state 52
    '{'         shift, and go to state 53

    id  go to state 75


state 20

   54 pragma_decl: keyPRAGMA . id ';'
   55            | keyPRAGMA . id '(' ')' ';'
   56            | keyPRAGMA . id '(' sequence_actuals ')' ';'

    IDENTIFIER  shift, and go to state 51
    '('         shift, and go to state 52
    '{'         shift, and go to state 53

    id  go to state 76


state 21

    6 unit_list: unit_list keyPRIVATE . ';'
   35 decl: keyPRIVATE . @2 decl

    ';'  shift, and go to state 77

    $default  reduce using rule 34 (@2)

    @2  go to state 78


state 22

  116 function_decl: keyPROCEDURE . id opt_polymorphism formals result_value opt_body ';'

    IDENTIFIER  shift, and go to state 51
    '('         shift, and go to state 52
    '{'         shift, and go to state 53

    id  go to state 79


state 23

    7 unit_list: unit_list keyPUBLIC . ';'
   37 decl: keyPUBLIC . @3 decl

    ';'  shift, and go to state 80

    $default  reduce using rule 36 (@3)

    @3  go to state 81


state 24
